Add visual drop hint indicator and node indices

--- a/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
@@ -1,3 +1,4 @@
 <div class="mona-tree" [tabindex]="1">
     <mona-sub-tree [nodes]="treeService.nodeSet()" [parent]="null" [depth]="0"></mona-sub-tree>
+    <mona-tree-drop-hint></mona-tree-drop-hint>
 </div>
