--- a/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
@@ -2,9 +2,10 @@
      [class.mona-selected]="selected()"
      [class.mona-highlighted]="navigated()"
      [class.mona-disabled]="disabled()"
-     (click)="onNodeClick($event)">
+     (click)="onNodeClick($event)" (contextmenu)="onNodeContextMenu($event)" #element>
     @if (treeService.nodeTemplate()) {
-        <ng-container [ngTemplateOutlet]="treeService.nodeTemplate()" [ngTemplateOutletContext]="{$implicit: treeNode()?.data}"></ng-container>
+        <ng-container [ngTemplateOutlet]="treeService.nodeTemplate()"
+                      [ngTemplateOutletContext]="{$implicit: treeNode()?.data, element: element.parentElement}"></ng-container>
     } @else {
         <span class="mona-tree-node-text">{{nodeText()}}</span>
     }
