Filterable directive and options

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -43,6 +43,7 @@
                             [monaTreeSelectable]="{ enabled: true, mode: 'multiple', childrenOnly: true, }"
                             [selectedKeys]="treeSelectedKeys"
                             (selectedKeysChange)="onTreeSelectedKeysChange($event)"
+                            [monaTreeFilterable]="{debounce: 0}"
                             monaTreeExpandable
                             [expandedKeys]="treeExpandedKeys"
                             (nodeSelect)="onTreeNodeSelect($event)"
