--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
@@ -38,7 +38,7 @@
             @if (node.children.length > 0 && nodeComponent.expanded()) {
                 <div class="mona-sub-tree-container"
                      [@nodeExpand]="nodeComponent.expanded()"
-                     [@.disabled]="!treeService.animationEnabled()">
+                     [@.disabled]="!treeService.animationEnabled() || treeService.filterText().length !== 0">
                     <mona-sub-tree [nodes]="node.children"
                                    [depth]="subTreeDepth()+1"
                                    [parent]="node"
