--- a/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
@@ -10,22 +10,23 @@
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-tree-popup-wrapper">
-        <mona-tree-view [data]="data"
-                        [keyField]="keyField"
-                        [childrenField]="childrenField"
-                        [textField]="textField"
-                        monaTreeViewDisable
-                        [nodeDisabler]="disabler()"
-                        [monaTreeViewSelectable]="selectableOptions"
-                        [selectedKeys]="selectedTreeKeys()"
-                        [monaTreeViewFilterable]="dropdownTreeService.filterableOptions"
-                        [filter]="dropdownTreeService.filterText()"
-                        [filterPlaceholder]="dropdownTreeService.filterPlaceholder()"
-                        (filterChange)="dropdownTreeService.filterChange.emit($event)"
-                        [monaTreeViewExpandable]="dropdownTreeService.expandableOptions"
-                        [expandedKeys]="dropdownTreeService.expandedKeys()"
-                        (expandedKeysChange)="onExpandedKeysChange($event)"
-                        (selectedKeysChange)="onSelectedKeysChange($event)"
-                        (selectionChange)="onSelectionChange($event)"></mona-tree-view>
+<!--        <mona-tree-view [data]="data"-->
+<!--                        [keyField]="keyField"-->
+<!--                        [childrenField]="childrenField"-->
+<!--                        [textField]="textField"-->
+<!--                        monaTreeViewDisable-->
+<!--                        [nodeDisabler]="disabler()"-->
+<!--                        [monaTreeViewSelectable]="selectableOptions"-->
+<!--                        [selectedKeys]="selectedTreeKeys()"-->
+<!--                        [monaTreeViewFilterable]="dropdownTreeService.filterableOptions"-->
+<!--                        [filter]="dropdownTreeService.filterText()"-->
+<!--                        [filterPlaceholder]="dropdownTreeService.filterPlaceholder()"-->
+<!--                        (filterChange)="dropdownTreeService.filterChange.emit($event)"-->
+<!--                        [monaTreeViewExpandable]="dropdownTreeService.expandableOptions"-->
+<!--                        [expandedKeys]="dropdownTreeService.expandedKeys()"-->
+<!--                        (expandedKeysChange)="onExpandedKeysChange($event)"-->
+<!--                        (selectedKeysChange)="onSelectedKeysChange($event)"-->
+<!--                        (selectionChange)="onSelectionChange($event)"></mona-tree-view>-->
+        <div>TREE WILL BE HERE</div>
     </div>
 </ng-template>
