--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -640,22 +640,18 @@ div.mona-time-picker-popup {
 
 .mona-dropdown-tree-popup-wrapper {
     max-height: 250px;
-    padding: 4px;
     overflow: hidden;
-    & mona-tree-view ul.mona-tree-list {
+    & div.mona-tree-view  {
         max-height: 200px;
-        overflow: auto;
-        padding-bottom: 4px;
-        padding-top: 4px;
-        padding-left: 4px;
-        @include scrollbars;
+        overflow: hidden;
     }
     & div.mona-tree-view-filter-container {
-        margin-top: 4px;
-        padding-left: 4px;
-        padding-bottom: 4px;
-        margin-bottom: 0 !important;
+        padding: 4px;
         border-bottom: 1px solid var(--mona-border-color);
+    }
+    & div.mona-tree-view-tree-container {
+        padding: 4px;
+        @include scrollbars;
     }
 }
 
